{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 132,
  "lineage": "55e6085f-e3e8-d073-6f05-7fd041dd328c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "github-actions-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05efe90670c460451",
            "arn": "arn:aws:ec2:us-east-1:224732705809:elastic-ip/eipalloc-05efe90670c460451",
            "association_id": "eipassoc-014caa070024ffe61",
            "domain": "vpc",
            "id": "eipalloc-05efe90670c460451",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05ce3d5a20fb64660",
            "private_dns": "ip-10-90-1-113.ec2.internal",
            "private_ip": "10.90.1.113",
            "public_dns": "ec2-52-1-160-192.compute-1.amazonaws.com",
            "public_ip": "52.1.160.192",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:224732705809:instance/i-01933dc29d1548949",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01933dc29d1548949",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myAwsKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05726d5d84d668fcb",
            "private_dns": "ip-10-90-1-136.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.90.1.136",
            "public_ip": "3.88.144.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b8058447c2ed5aa5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aec126790d9c529a",
            "tags": {
              "Name": "Public EC2 Instance"
            },
            "tags_all": {
              "Name": "Public EC2 Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9fc990a6ba40cda"
            ]
          },
          "dependencies": [
            "aws_security_group.public-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "github-actions-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224732705809:internet-gateway/igw-03218858693fc4538",
            "id": "igw-03218858693fc4538",
            "owner_id": "224732705809",
            "tags": {
              "Name": "GitHub Actions Internet Gateway"
            },
            "tags_all": {
              "Name": "GitHub Actions Internet Gateway"
            },
            "vpc_id": "vpc-0e98df4e2cb673112"
          },
          "dependencies": [
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "github-actions-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05efe90670c460451",
            "association_id": "eipassoc-014caa070024ffe61",
            "connectivity_type": "public",
            "id": "nat-05fa31e7f2032f4b9",
            "network_interface_id": "eni-05ce3d5a20fb64660",
            "private_ip": "10.90.1.113",
            "public_ip": "52.1.160.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aec126790d9c529a",
            "tags": {
              "Name": "GitHub Actions NAT Gateway"
            },
            "tags_all": {
              "Name": "GitHub Actions NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.github-actions-eip",
            "aws_subnet.public-subnet",
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private01-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224732705809:route-table/rtb-0176b9a8cca751cc5",
            "id": "rtb-0176b9a8cca751cc5",
            "owner_id": "224732705809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05fa31e7f2032f4b9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.147.19.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-05726d5d84d668fcb",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private01 Route Table"
            },
            "tags_all": {
              "Name": "Private01 Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e98df4e2cb673112"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.github-actions-eip",
            "aws_instance.public-instance",
            "aws_nat_gateway.github-actions-ngw",
            "aws_security_group.public-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private02-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224732705809:route-table/rtb-0db2914a34fa7faf6",
            "id": "rtb-0db2914a34fa7faf6",
            "owner_id": "224732705809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private02 Route Table"
            },
            "tags_all": {
              "Name": "Private02 Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e98df4e2cb673112"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224732705809:route-table/rtb-07d8c44100c21f7d1",
            "id": "rtb-07d8c44100c21f7d1",
            "owner_id": "224732705809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03218858693fc4538",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.147.19.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-05726d5d84d668fcb",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e98df4e2cb673112"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.public-instance",
            "aws_internet_gateway.github-actions-igw",
            "aws_security_group.public-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private01-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec83fa42c2946f99",
            "route_table_id": "rtb-0176b9a8cca751cc5",
            "subnet_id": "subnet-0689ca4d374c4cec2"
          },
          "dependencies": [
            "aws_eip.github-actions-eip",
            "aws_instance.public-instance",
            "aws_nat_gateway.github-actions-ngw",
            "aws_route_table.private01-rt",
            "aws_security_group.public-sg",
            "aws_subnet.private-subnet01",
            "aws_subnet.public-subnet",
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private02-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03547fcd3e7071363",
            "route_table_id": "rtb-0db2914a34fa7faf6",
            "subnet_id": "subnet-0e7e57ef7b4944a87"
          },
          "dependencies": [
            "aws_route_table.private02-rt",
            "aws_subnet.private-subnet02",
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f44ba71297014db1",
            "route_table_id": "rtb-07d8c44100c21f7d1",
            "subnet_id": "subnet-0aec126790d9c529a"
          },
          "dependencies": [
            "aws_instance.public-instance",
            "aws_internet_gateway.github-actions-igw",
            "aws_route_table.public-rt",
            "aws_security_group.public-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224732705809:security-group/sg-0a9fc990a6ba40cda",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9fc990a6ba40cda",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240527041659785100000002",
            "name_prefix": "terraform-",
            "owner_id": "224732705809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance Security Group"
            },
            "tags_all": {
              "Name": "Public Instance Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e98df4e2cb673112"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "route53-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224732705809:security-group/sg-09d7f0148d911a6e4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d7f0148d911a6e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "terraform-20240527060750758600000001",
            "name_prefix": "terraform-",
            "owner_id": "224732705809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Route 53 Security Group"
            },
            "tags_all": {
              "Name": "Route 53 Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e98df4e2cb673112"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224732705809:subnet/subnet-0689ca4d374c4cec2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.90.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0689ca4d374c4cec2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224732705809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 01"
            },
            "tags_all": {
              "Name": "Private Subnet 01"
            },
            "vpc_id": "vpc-0e98df4e2cb673112"
          },
          "dependencies": [
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224732705809:subnet/subnet-0e7e57ef7b4944a87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.90.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7e57ef7b4944a87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224732705809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 02"
            },
            "tags_all": {
              "Name": "Private Subnet 02"
            },
            "vpc_id": "vpc-0e98df4e2cb673112"
          },
          "dependencies": [
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224732705809:subnet/subnet-0aec126790d9c529a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.90.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aec126790d9c529a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224732705809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0e98df4e2cb673112"
          },
          "dependencies": [
            "aws_vpc.gihub-actions-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gihub-actions-aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224732705809:vpc/vpc-0e98df4e2cb673112",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.90.0.0/16",
            "default_network_acl_id": "acl-00b6e2b8cbec524e0",
            "default_route_table_id": "rtb-0cd305f790916a8a7",
            "default_security_group_id": "sg-0909d54e44d80df49",
            "dhcp_options_id": "dopt-0e07cf16382c1e716",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e98df4e2cb673112",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd305f790916a8a7",
            "owner_id": "224732705809",
            "tags": {
              "Name": "GitHub Actions VPC"
            },
            "tags_all": {
              "Name": "GitHub Actions VPC"
            }
          }
        }
      ]
    }
  ]
}